--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -1,5 +1,6 @@
 @import 'nullstyle.scss';
 @import 'header.scss';
+@import 'footer.scss';
 @import 'button.scss';
 @font-face {
     font-family: 'TT Hoves';
@@ -77,7 +78,7 @@ object-fit: cover;
 	flex-direction:column;
 	overflow: hidden;
 	margin: 0px auto;
-	max-width: 1440px;
+	
 }
 .container{
 	max-width: 1200px;
@@ -209,9 +210,9 @@ object-fit: cover;
 .about {}
 .about__container {
 	margin-top: 120px;
-	margin-bottom: 150px;
 	display: grid;
 	grid-template-columns:repeat(auto-fill,minmax(400px,1fr));
+	margin-bottom: 30px;
 	grid-template-rows: 220px 170px;
 	gap:calc(10px + (30 - 10) * ((100vw - 768px)/(1440 - 768)));
 	background-color: var(--1, #FBFBFB);
@@ -265,13 +266,15 @@ object-fit: cover;
 	
 }
 .about__title {
-	color: var(--gray-4, #BDBDBD);
-	font-size: 64px;
-	font-weight: 300;
 	margin-bottom:calc(10px + (20 - 10) * ((100vw - 768px)/(1440 - 768)));
 	@media (max-width: 600px) {
 		font-size: 50px;
 	}
+}
+.title{
+	color: var(--gray-4, #BDBDBD);
+	font-size: 64px;
+	font-weight: 300;
 }
 .about__text {
 	color: #000;
@@ -291,3 +294,331 @@ color: var(--gray-1, #333);
 
 
 
+.page__tasks {}
+.tasks {}
+.tasks__container {
+	display: flex;
+	flex-direction:column;
+	padding-top: 20px;
+	padding-bottom: 70px;
+}
+.tasks__title {
+	margin-bottom: 60px;
+}
+.tasks__body {
+	display: grid;
+	grid-template-columns:auto auto;
+	gap:calc(50px + (175 - 20) * ((100vw - 768px)/(1440 - 768)));
+	@media (max-width: 767px) {
+		grid-template-columns:1fr;
+		justify-content: center;
+		align-items: center;
+	}
+   }
+.task__column {
+	justify-self: start;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+		gap:calc(10px + (30 - 20) * ((100vw - 768px)/(1440 - 768)));
+		@media (max-width: 767px) {
+		 flex-direction:column;
+	}
+	@media (min-width: 1920px) {
+		 flex-direction:column;
+	}
+}
+.task__text {
+color: var(--gray-1, #333);
+font-size: 22px;
+font-weight: 400;
+line-height: 1.6;
+@media (max-width: 767px) {
+		text-align: center;
+	}
+	@media (min-width: 1920px) {
+		text-align: center;
+	}
+}
+.task__number{
+color: var(--gray-6, #F2F2F2);
+font-size: 200px;
+font-weight: 900;
+
+}
+
+.page__projects {}
+.projects {}
+.projects__container {
+	display: flex;
+	flex-direction:column;
+	padding-bottom: 120px;
+}
+.projects__title {
+	margin-bottom: 60px;
+}
+.projects__body {
+	display: grid;
+	grid-template-columns: 1fr 1fr 0.5fr 1.5fr;
+	grid-template-rows: 255px 255px;
+	gap:30px;
+	@media (max-width: 1024px) {
+		grid-template-columns: 1fr 1fr;
+		grid-template-rows: 255px 255px 255px;
+		}
+		@media (max-width: 767px) {
+		grid-template-columns: 1fr ;
+		grid-template-rows: repeat(5,255px);
+		}
+}
+.project__item {
+	position: relative;
+	&:nth-child(1){
+		grid-column:1/3;
+		grid-row:1/2;
+	}
+	&:nth-child(2){
+	grid-column:3/5;
+		grid-row:1/2;
+	}
+	&:nth-child(3){
+		grid-column:1/2;
+		grid-row:2/3;
+	}
+	&:nth-child(4){
+		grid-column:2/4;
+		grid-row:2/3;
+	}
+	&:nth-child(5){
+		grid-column:4/5;
+		grid-row:2/3;
+	}
+	@media (max-width: 1024px) {
+		&:nth-child(1){
+		grid-column:1/2;
+		grid-row:1/2;
+	}
+	&:nth-child(2){
+	grid-column:2/3;
+		grid-row:1/2;
+	}
+	&:nth-child(3){
+		grid-column:1/2;
+		grid-row:2/3;
+	}
+	&:nth-child(4){
+		grid-column:2/3;
+		grid-row:2/3;
+	}
+	&:nth-child(5){
+		grid-column:1/3;
+		grid-row:3/4;
+	}
+	
+	}
+	@media (max-width: 767px) {
+		&:nth-child(1){
+		grid-column:1/2;
+		grid-row:1/2;
+	}
+	&:nth-child(2){
+	grid-column:1/2;
+		grid-row:2/3;
+	}
+	&:nth-child(3){
+		grid-column:1/2;
+		grid-row:3/4;
+	}
+	&:nth-child(4){
+		grid-column:1/2;
+		grid-row:4/5;
+	}
+	&:nth-child(5){
+		grid-column:1/2;
+		grid-row:5/6;
+	}
+	
+	}
+}
+.project__image {
+	overflow: hidden;
+	opacity: 0.5;
+	transition:opacity 0.3s ease 0s;
+	position: relative;
+	width: 100%;
+	height: 100%;
+	img{
+     position: absolute;
+     transition:transform 0.3s ease 0s;
+     width: 100%;
+     height: 100%;
+     top: 0;
+     left: 0;
+     object-fit:cover;
+	}
+	@media (any-hover:hover) {
+		&:hover{
+			opacity: 1;
+			img{
+				transform:scale(1.1)
+			}
+		}
+	}
+	@media (any-hover:none){
+     opacity: 1;
+	}
+	&_body{
+		pointer-events:none;
+		position: absolute;
+		top: 48px;
+	    left:79px;
+	     @media (max-width: 1200px) {
+		top: 68px;
+	    left:49px;
+	}
+	}
+}
+.project__title {
+	font-weight: 700;
+	font-size: 64px;
+	color: #FFF;
+	margin-bottom: 14px;
+	@media (max-width: 1200px) {
+		font-size: 40px;
+	}
+}
+.project__button {
+	font-weight: 400;
+	font-size: 12px;
+	letter-spacing: 2.4px;
+    color:#fff;
+    padding: 0;
+    background-image: url('../img/projects/arrow.svg');
+    width: 17px;
+	height: 8px;
+    background-repeat: no-repeat;
+	background-position: 75%;
+	padding-right: 60px;
+	text-transform: uppercase;
+}
+.projects__button {
+	margin-top: 30px;
+	align-self: flex-end;
+	color:#fff;
+	background-color: #333;
+	background-image: url('../img/projects/arrow.svg');
+	background-position: 80%;
+}
+
+
+.page__connect {}
+.connect {
+	padding-bottom: 120px;
+}
+.connect__container {
+	display: flex;
+	flex-direction:column;
+}
+.connect__title {
+	margin-bottom: 22px;
+	@media (max-width: 767px) {
+		text-align: center;
+	}
+}
+.connect__body {
+	display: flex;
+	gap:30px;
+	@media (max-width: 767px) {
+	align-items: center;
+	justify-content: center;
+}
+}
+.connect__form {}
+.form {
+	display: grid;
+	gap:10px;
+}
+.form__item {
+ span{
+ 	display: inline-block;
+ 	padding: 15px 10px 10px 10px;
+	color:rgba(255,33,87,0.86);
+    font-weight: 500;
+ }
+}
+.form__input {
+	height: 46px;
+	padding: 15px 21px;
+	color:#8D8D8D;
+	background-color: #F3F3F3;
+	width: 100%;
+	font-size: 14px;
+	font-weight: 400;
+	letter-spacing: 0.56px;
+	&::placeholder{
+
+	}
+	&:focus{
+		&::placeholder{
+			color:transparent;;
+		}
+	}
+}
+textarea.form__input{
+	height: 147px;
+	resize:vertical;
+	padding: 12px 24px;
+}
+input.error,textarea.error{
+	box-shadow: 0px 1px 14px 6px rgba(255,33,87,0.86) !important;
+	&:not(:focus){
+		border: 2px solid red;
+		&::placeholder{
+		color:rgba(255,33,87,0.86);
+		font-weight: 500;
+	}
+}
+}
+input.green,textarea.green{
+	&:not(:focus){
+		border: 1px solid green;
+		
+}
+}
+.form__warning {
+	margin-top: 10px;
+	margin-bottom: 10px;
+	font-size: 14px;
+	font-weight: 500;
+	color:#333;
+	text-align: left;
+
+}
+.form__button {
+	justify-self: start;
+	color:#fff;
+	background-color: #333;
+	background-image: url('../img/projects/arrow.svg');
+	background-position: 77%;
+&:disabled{
+	opacity: 0.5;
+	cursor: auto;
+}
+}
+.connect__image {
+	position: relative;
+	width: 100%;
+	height: 100%;
+	aspect-ratio:1170/530;
+	img{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  object-fit:cover;
+}
+@media (max-width: 767px) {
+	display: none;
+}
+}
