--- a/css/style.css
+++ b/css/style.css
@@ -392,12 +392,6 @@ h1, h2, h3, h4, h5, h6 {
         -ms-flex: 1 1 auto;
             flex: 1 1 auto;
     text-align: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
   }
   .contacts__list {
     -webkit-box-orient: horizontal;
@@ -579,11 +573,20 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  gap: calc(30px + 90 * (100vw - 768px) / 672);
 }
 @media (max-width: 767px) {
   .slider__container {
     display: block;
+  }
+}
+@media (min-width: 1920px) {
+  .slider__container {
+    gap: 100px;
+  }
+}
+@media (max-width: 1920px) {
+  .slider__container {
+    gap: calc(30px + 90 * (100vw - 768px) / 672);
   }
 }
 
